# nemo-fusion

./: .gitignore  LICENSE  Makefile  QUICKSTART.md  README.md  pyproject.toml  pytest.ini
benchmarks/: parallelism_comparison.py
examples/: autonomous_vehicle_perception.py  llama_70b_optimization.py  medical_multimodal_diagnosis.py  multimodal_training.py  profiling_demo.py
nemo_fusion/: __init__.py
nemo_fusion/multimodal/: __init__.py  data_pipeline.py  fusion_layers.py  unified_trainer.py
nemo_fusion/optimization/: __init__.py  checkpoint_utils.py  gradient_optimization.py  mixed_precision.py
nemo_fusion/parallelism/: __init__.py  auto_parallel.py  hybrid_parallel.py  memory_efficient.py
nemo_fusion/profiling/: __init__.py  bottleneck_analyzer.py  comm_profiler.py  gpu_profiler.py
tests/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_multimodal.py  test_optimization.py  test_parallelism.py  test_profiling.py
