[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nemo-fusion"
version = "0.1.0"
description = "Advanced parallelism and optimization toolkit for NVIDIA NeMo Framework"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Abdullah Kazi", email = "abdullah1kazi@users.noreply.github.com"}
]
keywords = [
    "nemo",
    "megatron",
    "distributed-training",
    "parallelism",
    "optimization",
    "deep-learning",
    "llm",
    "multimodal"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "torch>=2.5.0",
    "pytorch-lightning>=2.0.0",
    "nemo-toolkit[all]>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "psutil>=5.9.0",
    "pynvml>=11.5.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "tensorboard>=2.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "pytest-timeout>=2.1.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.3.0",
    "pylint>=2.17.0",
    "pre-commit>=3.3.0",
    "ruff>=0.1.0",
]

docs = [
    "sphinx>=6.2.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=1.0.0",
    "sphinx-autodoc-typehints>=1.23.0",
]

profiling = [
    "py-spy>=0.3.14",
    "memory-profiler>=0.61.0",
]

all = [
    "nemo-fusion[dev,docs,profiling]",
]

[project.urls]
Homepage = "https://github.com/abdullah1kazi/nemo-fusion"
Documentation = "https://github.com/abdullah1kazi/nemo-fusion/docs"
Repository = "https://github.com/abdullah1kazi/nemo-fusion"
Issues = "https://github.com/abdullah1kazi/nemo-fusion/issues"

[tool.uv]
dev-dependencies = [
    "pytest>=7.3.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=nemo_fusion --cov-report=html --cov-report=term-missing"

[tool.coverage.run]
source = ["nemo_fusion"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

